src/objects/Apttus_XApps__AppFile__c.object
<CustomObject>
    <description>Apttus X-Author for Excel™ Application Files for Check-in and Check-Out functionality</description>
    <fields>
        <fullName>Apttus_XApps__FileId__c</fullName>
        <label>File ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__FileType__c</fullName>
        <label>File Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__ParentId__c</fullName>
        <label>Parent Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>App File</label>
    <listViews>
        <fullName>Apttus_XApps__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_XApps__FileId__c</columns>
        <columns>Apttus_XApps__FileType__c</columns>
        <columns>Apttus_XApps__IsLocked__c</columns>
        <columns>Apttus_XApps__ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>